Minor fixes on scrollbar, still not working... Broken on ipad/iphone...

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -124,7 +124,7 @@ header {
 	position: relative;
 	height: 100%;
 }
-.swiper-container/*, .swiper-wrapper*/ {
+.swiper-container, .swiper-wrapper {
 	 height: 100%; 
 }
 hr.buffer {
@@ -278,12 +278,11 @@ a:hover.arrow-left , a:hover.arrow-right {
 	height: 100%;
 }
 
-.text {
-	height:200px;
-}
 .text .swiper-wrapper {
 	width: 100%;
 	padding-right: 10px;
+	height:300px;
+	padding-bottom: 20px;
 }
 .text .swiper-slide {
 	padding-right: 2px;
@@ -298,11 +297,10 @@ a:hover.arrow-left , a:hover.arrow-right {
 	width: 5px;
 }
 .swiper-scrollbar-drag {
-	height: 100%;
+	height: 10px;
 	width: 100%;
 	position: relative;
 	background: #9F9F9F;
-	border-radius: 10px;
 }
 .swiper-scrollbar-cursor-drag {
 	cursor: move;
@@ -342,7 +340,8 @@ a:hover.arrow-left , a:hover.arrow-right {
 	margin:0 auto;
 	max-height: 70%;
 }
-.info_content {
+.info_content,
+.info_content .text {
 	max-height: 500px;
 	padding: 2px;
 }
@@ -376,6 +375,7 @@ a:hover.arrow-left , a:hover.arrow-right {
 	text-align: justify;
 	max-width: 800px;
 	width: 80%;
+	padding-bottom: 20px;
 	padding-top: 5px;
 }
 
